@@ -125,6 +125,7 @@
 #define EVENT_NODE_UNREACHABLE            68
 #define EVENT_TABLE_THRESHOLD_ACTIVATED   69
 #define EVENT_TABLE_THRESHOLD_DEACTIVATED 70
+#define EVENT_IF_PEER_CHANGED             71
 
 #define EVENT_SNMP_UNMATCHED_TRAP         500
 #define EVENT_SNMP_COLD_START             501
