@@ -286,8 +286,10 @@ bool DCTable::deleteAllData()
 	bool success;
 
    lock();
+   DB_HANDLE hdb = DBConnectionPoolAcquireConnection();
    _sntprintf(szQuery, 256, _T("DELETE FROM tdata_%d WHERE item_id=%d"), m_pNode->Id(), (int)m_dwId);
-	success = DBQuery(g_hCoreDB, szQuery) ? true : false;
+	success = DBQuery(hdb, szQuery) ? true : false;
+   DBConnectionPoolReleaseConnection(hdb);
    unlock();
 	return success;
 }
